--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <input class="search-bar" placeholder="Search tasks..." />
       </div>
       <div class="filters">
-        <div class="filter" data-filter="all">All</div>
+        <div class="filter active" data-filter="all">All</div>
         <div class="filter" data-filter="completed">Complete</div>
-        <div class="filter" data-filter="pending">Incomplete</div>
+        <div class="filter" data-filter="pending">Pending</div>
         <div class="delete-all">Clear All</div>
       </div>
       <div class="todos-container">
